product-sub-ms.yml
# APP DEPLOYMENT

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: product-sub-ms
  name: product-sub-ms
spec:
  replicas: 3
  selector:
    matchLabels:
      run: product-sub-ms-exposed
  template:
    metadata:
      labels:
        run: product-sub-ms-exposed
    spec:
      containers:
      - args:
        - node
        - product-subscriber-ms.js
        image: luisw19/product-sub-ms:2.0.0
        name: product-sub-ms
      restartPolicy: Always

#---

# APP SERVICE

#apiVersion: v1
#kind: Service
#metadata:
#  labels:
#    run: product-sub-ms
#  name: product-sub-ms
#spec:
#  ports:
#  - name: headless
#    port: 55555
#    targetPort: 0
#  selector:
#    run: product-sub-ms-exposed
