orders-ms.yml
# APP DEPLOYMENT

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: orders-ms
  name: orders-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      run: orders-ms-exposed
  template:
    metadata:
      labels:
        run: orders-ms-exposed
    spec:
      containers:
      - args:
        - npm
        - start
        image: luisw19/orders-ms:1.0.1
        name: oders-ms
        ports:
        - containerPort: 3000
      restartPolicy: Always

---

# APP SERVICE

apiVersion: v1
kind: Service
metadata:
  labels:
    run: orders-ms
  name: orders-ms
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: orders-ms-exposed
  type: NodePort
