orders-prod-ms.yml
# APP DEPLOYMENT

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: orders-prod-ms
  name: orders-prod-ms
spec:
  replicas: 3
  selector:
    matchLabels:
      run: orders-prod-ms-exposed
  template:
    metadata:
      labels:
        run: orders-prod-ms-exposed
    spec:
      containers:
      - args:
        - npm
        - start
        image: luisw19/orders-prod-ms:2.0.0
        name: orders-prod-ms
        ports:
        - containerPort: 4000
      restartPolicy: Always

---

# APP SERVICE

apiVersion: v1
kind: Service
metadata:
  labels:
    run: orders-prod-ms
  name: orders-prod-ms
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    run: orders-prod-ms-exposed
  type: NodePort
