orders-ui.yml
# APP DEPLOYMENT

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: orders-ui
  name: orders-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      run: orders-ui
  template:
    metadata:
      labels:
        run: orders-ui
    spec:
      containers:
      - args:
        - bash
        - container-entrypoint.sh
        image: luisw19/orders-ui:1.0.5
        name: orders-ui
        ports:
        - containerPort: 8080
      restartPolicy: Always

---

# APP SERVICE

apiVersion: v1
kind: Service
metadata:
  labels:
    run: orders-ui
  name: orders-ui
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: orders-ui
  type: NodePort
